--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	<script type="text/javascript" src="js/phaser.min.js"></script>
 	<script type="text/javascript" src="load.js"></script>
     <script type="text/javascript" src="menu.js"></script>
+	<script type="text/javascript" src="achievements.js"></script>
     <script type="text/javascript" src="play.js"></script>
     <script type="text/javascript" src="game.js"></script>
 </head>
