--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-51535151-1', 'flappypussy.net');
+  ga('create', 'UA-51535151-1', 'flappypussy.co');
   ga('send', 'pageview');
 
 </script>
